[package]
name = "rs_early_cascade"
version = "0.1.0"
edition = "2021"

[dependencies]
ntapi = "0.4.1"

[dependencies.windows-sys]
version = "0.59.0"
features = [
    "Win32",
    "Win32_System",
    "Win32_System_Memory",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices"
]